--- a/HW1123/06_陳嘉祥/CH09.02_Q23.md
+++ b/HW1123/06_陳嘉祥/CH09.02_Q23.md
@@ -4,3 +4,21 @@ Title: HW1123_06_Titan(陳嘉祥)
 
 ![CH09 02_Q23](https://github.com/user-attachments/assets/cdc82cf1-c0dd-4d3f-81ad-80676c10dde6)
 
+### a. 如果你是質量控制經理，並希望確保每包絞肉的平均重量確實是1磅，你會做那些假設檢定？
+$$H_0$$ : $$\mu$$ = 1 
+
+$$H_a$$ : $$\mu\ne$$ 1 
+
+
+### b. 計算 p 值並用它來執行假設檢定。
+假設 $\alpha = 0.05$， 
+
+由題意知樣本量(n=35)大於統計學家認定的30，故 $$\frac{\bar{x} - \mu}{s/\sqrt{n}}$$ -> 可以使用Z分配進行檢定。 
+
+P-Value=P(Z>| $$z_{0}$$ |)= 2 * P(Z>| $$\frac{1.01 - 1}{0.18/\sqrt{35}} $$ |) = 2 * P(Z>0.33)，查表得到: 
+
+=2*(1-P(Z<0.33)=2*(1-0.6293)=0.7414 > $$\alpha = 0.05 $$，因為統計量未落入Rejection Region，故沒有足夠證據推翻 $$H_{0} $$。
+
+
+### c. 如何向消費者利益小組報告你的研究結果？
+
