--- a/HW1123/13_陳峻毅/CH09.04_Q8.md
+++ b/HW1123/13_陳峻毅/CH09.04_Q8.md
@@ -1,1 +1,58 @@
+![391338668-6041b17a-003e-46cf-be46-edd46f88f925](https://github.com/user-attachments/assets/7032c002-afc1-4ff6-b0f7-874bfc1a5066)
 
+## 已知數據
+- 樣本比例： $\hat{p} = 56\% = 0.56$
+- 假設的母體比例： $p_0 = 50\% = 0.50$
+- 樣本大小：n = 500
+- 顯著水準： $\alpha = 0.05$
+
+---
+
+## a. 使用假設檢定
+
+### 假設設定
+- **虛無假設 $H_0$**：
+  $H_0: p = 0.50$
+  （美國不願意乘坐無人駕駛汽車的比例為 50%，即沒有超過簡單多數）
+
+- **替代假設 $H_1$**：
+  $H_1: p > 0.50$
+  （美國不願意乘坐無人駕駛汽車的比例超過 50%）
+
+這是一個 **右尾檢定**。
+
+---
+### 檢定統計量計算
+檢定統計量公式：
+$z = \frac{\hat{p} - p_0}{\sqrt{\frac{p_0 (1 - p_0)}{n}}}$
+
+代入數據：
+$z = \frac{0.56 - 0.50}{\sqrt{\frac{0.50 \cdot (1 - 0.50)}{500}}} = \frac{0.06}{\sqrt{\frac{0.25}{500}}} = \frac{0.06}{\sqrt{0.0005}} = \frac{0.06}{0.02236} \approx 2.68$
+
+---
+### 拒絕域與結論
+- 顯著水準 $\alpha = 0.05$
+- 從標準常態分布表查得臨界值：
+  $z_\alpha = 1.645$
+- 比較檢定統計量與臨界值：
+  $z = 2.68 > z_\alpha = 1.645$
+
+**結論**：拒絕虛無假設 $H_0$。有足夠證據表明超過簡單多數（50%）的美國人不願意乘坐無人駕駛汽車。
+
+---
+## b. 使用 p-value 方法
+
+### p-value 計算
+從標準常態分布表查得：
+$P(Z \geq 2.68) \approx 0.0037$
+
+---
+### 結論
+- 比較：
+  $p = 0.0037 < \alpha = 0.05$
+- **結果**：同樣拒絕虛無假設 $H_0$，結論與固定拒絕域的方法一致。
+
+---
+## 綜合結論
+1. **假設檢定**和**p-value 方法**均得出一致結論：超過簡單多數（50%）的美國人不願意乘坐無人駕駛汽車。
+2. 由於 p 值非常小，結果具有高度統計顯著性，支持替代假設。
