--- a/HW1123/06_陳嘉祥/CH09.02_Q24.md
+++ b/HW1123/06_陳嘉祥/CH09.02_Q24.md
@@ -28,5 +28,5 @@ Z-test : Z = $$\frac{\bar{x} - \mu}{s/\sqrt{n}} $$  = P(Z>| $$\frac{5.56 - 5.86}
 
 P-Value = P( Z < -2.7105 )，查表得到 : P( Z < -2.7105 ) = 0.00335 < $$\alpha=0.05 $$。 
 
-可以。因為P-Value檢定量<顯著水準($$\alpha $$)，落入Rejection Region，故推翻 $$H_{0} $$。
+可以。因為P-Value檢定量<顯著水準($$\alpha $$)，落入Rejection Region，故拒絕 $$H_{0} $$。
 
