--- a/HW1123/13_陳峻毅/CH09.04_Q9.md
+++ b/HW1123/13_陳峻毅/CH09.04_Q9.md
@@ -1,1 +1,61 @@
+![391339848-20479018-1739-4dc0-80f7-b768cb7e8e7c](https://github.com/user-attachments/assets/8cf9b60c-6eb3-44d2-bf40-e6f1bdbaf718)
 
+## 已知數據
+- 假設的母體比例： $p_0 = 0.20$
+- 樣本大小：n = 200
+- 失敗的商家數量：x = 30
+- 樣本比例： $\hat{p} = \frac{x}{n} = \frac{30}{200} = 0.15$
+- 顯著水準： $\alpha = 0.05$
+
+---
+
+## a. 假設設定
+
+- **虛無假設 $H_0$**：\
+  $H_0: p = 0.20$
+  （新稅法未能減少小型企業失敗的比例）
+
+- **替代假設 ($H_1$)**：\
+  $H_1: p < 0.20 $
+  （新稅法成功減少了小型企業失敗的比例）
+這是一個 **左尾檢定**。
+
+---
+## b. 檢定統計量計算
+
+檢定統計量公式：
+$z = \frac{\hat{p} - p_0}{\sqrt{\frac{p_0 (1 - p_0)}{n}}}$
+
+代入數據：
+$z = \frac{0.15 - 0.20}{\sqrt{\frac{0.20 \cdot (1 - 0.20)}{200}}} = \frac{-0.05}{\sqrt{\frac{0.20 \cdot 0.80}{200}}} = \frac{-0.05}{\sqrt{0.0008}} = \frac{-0.05}{0.02828} \approx -1.77$
+
+---
+## c. 拒絕域與結論
+
+### 拒絕域
+對於顯著水準 $\alpha = 0.05$，左尾檢定的臨界值：
+$z_\alpha = -1.645$
+
+### 比較檢定統計量與拒絕域
+$z = -1.77 < z_\alpha = -1.645$
+
+因此，檢定統計量落在拒絕域內。
+### 結論
+**拒絕虛無假設 $H_0$**。有足夠證據表明新稅法幫助減少了小型企業的失敗比例。
+
+---
+## d. p-value 計算與解釋
+
+從標準常態分布表查得：
+$P(Z \leq -1.77) \approx 0.0384$
+
+### 比較與結論
+- $\alpha = 0.05$
+- 比較：
+  $p = 0.0384 < \alpha = 0.05$
+
+結論與拒絕域方法一致，**拒絕虛無假設 $H_0$**，表明新稅法對減少小型企業失敗比例有效。
+---
+## 綜合結果
+1. 使用拒絕域方法與 p-value 方法得出的結論一致。
+2. 新稅法顯著降低了小型企業的失敗率，提供了有力的統計證據支持其有效性。
