--- a/HW1123/13_陳峻毅/CH10.01_Q6-7.md
+++ b/HW1123/13_陳峻毅/CH10.01_Q6-7.md
@@ -1,1 +1,21 @@
+![391341115-b9d0520b-faf9-4ad1-a467-c97b542068ca](https://github.com/user-attachments/assets/ab97b5ea-ebbc-4720-84a9-30f361fd2aec)
 
+## 1. t 分布的兩個假設條件
+
+1. **母體分布為正態分布**  
+   t 分布的使用假設母體分布是正態分布，尤其當樣本數較小時，這一假設尤為重要。
+
+2. **未知母體標準差**  
+   t 分布假設母體標準差未知，因此使用樣本標準差 ($s$) 作為估計值。
+---
+## 6-7. 使用 t 表右尾查表
+### **6. $a = 0.10, df = 7$**
+從 t 表查得：
+$t_{0.10, 7} = 1.415$
+
+---
+## 7–11. 使用 t 表左尾查表
+
+### **7. $a = 0.01, df = 9$**
+左尾值即為右尾對稱值的負數：
+$t_{0.01, 9} = -2.821$
