--- a/HW1123/13_陳峻毅/CH10.02_Q20.md
+++ b/HW1123/13_陳峻毅/CH10.02_Q20.md
@@ -1,1 +1,60 @@
+![391342217-a7498297-7ddd-48ad-a55d-4298d2093995](https://github.com/user-attachments/assets/6d3ddfd6-3b67-4923-8281-51a308b011a7)
 
+## 已知數據
+- 母體平均值（健康人）： $\mu_0 = 74$
+- 樣本平均值： $\bar{x} = 69.7$
+- 樣本標準差：s = 16
+- 樣本大小：n = 25
+- 顯著水準： $\alpha = 0.05$
+
+這是一個雙尾檢定，因為假設的目標是檢查中風患者的平均腦血流量是否與健康人不同。
+
+---
+## a. 假設設定
+
+- **虛無假設 $H_0$**：
+  $H_0: \mu = 74$
+  （中風患者的腦血流量與健康人相同）
+- **替代假設 ($H_1$)**：
+  $H_1: \mu \neq 74$
+  （中風患者的腦血流量不同於健康人）
+
+---
+## b. 檢定統計量計算
+
+檢定統計量公式：
+$t = \frac{\bar{x} - \mu_0}{\frac{s}{\sqrt{n}}}$
+
+代入數據：
+$t = \frac{69.7 - 74}{\frac{16}{\sqrt{25}}} = \frac{-4.3}{\frac{16}{5}} = \frac{-4.3}{3.2} \approx -1.344$
+
+---
+## c. 拒絕域與結論
+### 臨界值
+對於雙尾檢定，顯著水準 $\alpha = 0.05$，自由度 df = n - 1 = 25 - 1 = 24。從 t 表查得：
+$t_\alpha = \pm 2.064$
+
+### 比較檢定統計量與臨界值
+$t = -1.344 \quad \text{不落在拒絕域 } [-2.064, 2.064]$
+
+### 結論
+**不拒絕虛無假設 $H_0$**。沒有足夠證據表明中風患者的腦血流量與健康人有顯著差異。
+---
+## d. p-value 計算
+
+從 t 表查得，當 $t = -1.344$ 且 $df = 24$ 時：
+$P(T \leq -1.344) \approx 0.095$
+
+由於這是雙尾檢定：
+$p = 2 \times P(T \leq -1.344) \approx 2 \times 0.095 = 0.19$
+
+---
+## 結論
+- $p = 0.19 > \alpha = 0.05$
+- **結果一致**：不拒絕虛無假設 $H_0$。
+
+---
+## 綜合結果
+1. **檢定統計量**：t = -1.344
+2. **p-value**：0.19
+3. **結論**：在顯著水準 $\alpha = 0.05$ 下，無法拒絕虛無假設。中風患者的腦血流量與健康人沒有顯著差異。
