--- a/HW1123/06_陳嘉祥/CH09.04_Q01-03.md
+++ b/HW1123/06_陳嘉祥/CH09.04_Q01-03.md
@@ -4,3 +4,24 @@ Title: HW1123_06_Titan(陳嘉祥)
 
 ![CH09 04_Q01-03](https://github.com/user-attachments/assets/d0888fd0-f55a-49b7-812e-dfda851917ee)
 
+由題目得知：在顯著水準 α = 0.05。進行假設檢定，並陳述結論 
+
+### 1：隨機抽取的樣本大小 n=1000，樣本中的成功次數為 279 次，我們希望檢驗比例 p 是否小於 0.3 
+
+$$H_0$$ : P $$\ge$$ = 0.3 
+
+$$H_a$$ : P < 0.3 (左尾檢定) 
+
+已知條件 : n=1000, $$\hat{P} =297/1000 $$=0.297, n*p=300 且 n*(1-p)=700，故可採用Z分配進行檢定。  
+
+$$\alpha $$ = 0.05 (左尾檢定)，查表得到Z=-1.645 
+
+Z-test : Z =  
+
+= -1.449 > $$\alpha=-1.645 $$。  
+
+
+
+因為Z檢定量未落在Rejection Region，故不拒絕 $$H_{0} $$ 。  
+
+
