--- a/HW1123/13_陳峻毅/CH10.02_Q21.md
+++ b/HW1123/13_陳峻毅/CH10.02_Q21.md
@@ -1,1 +1,48 @@
+![391342819-8e4713d1-bd25-4a9e-9541-30c0e28c134f](https://github.com/user-attachments/assets/56ae42c9-f609-4001-8ed6-9f28159c225a)
 
+## 已知數據
+- 樣本平均值： $\bar{x} = 28.7 \, \text{cm}$
+- 樣本標準差： $s = 8.6 \, \text{cm}$
+- 樣本大小：n = 17
+- 信心水準： $90\%$
+
+---
+
+## 步驟 1：確定臨界值 $t_{\alpha/2}$
+
+### 自由度
+自由度為：
+$df = n - 1 = 17 - 1 = 16$
+
+### 查表
+在 $90\%$ 信心水準下，$\alpha = 1 - 0.90 = 0.10$，雙尾檢定 $\alpha/2 = 0.05$，從 t 表查得：
+$t_{0.05, 16} \approx 1.746$
+
+---
+## 步驟 2：計算標準誤差
+標準誤差公式：
+$SE = \frac{s}{\sqrt{n}}$
+
+代入數據：
+$SE = \frac{8.6}{\sqrt{17}} = \frac{8.6}{4.1231} \approx 2.086$
+
+---
+
+## 步驟 3：計算信賴區間
+信賴區間公式：
+$\bar{x} \pm t_{\alpha/2} \cdot SE$
+
+代入數據：
+$28.7 \pm 1.746 \cdot 2.086$
+
+計算：
+$28.7 \pm 3.642$
+
+---
+## 結果
+信賴區間為：
+$(28.7 - 3.642, 28.7 + 3.642) = (25.058, 32.342)$
+---
+
+## 結論
+在 $90\%$ 的信心水準下，4 歲紅松樹的平均主幹生長量的信賴區間為 $25.06 \, \text{cm}$ 至 $32.34 \, \text{cm}$。
