--- a/HW1123/13_陳峻毅/CH10.02_Q21.md
+++ b/HW1123/13_陳峻毅/CH10.02_Q21.md
@@ -15,7 +15,7 @@
 $df = n - 1 = 17 - 1 = 16$
 
 ### 查表
-在 $90\%$ 信心水準下，$\alpha = 1 - 0.90 = 0.10$，雙尾檢定 $\alpha/2 = 0.05$，從 t 表查得：
+在 90% 信心水準下， $\alpha = 1 - 0.90 = 0.10$，雙尾檢定 $\alpha/2 = 0.05$，從 t 表查得：
 $t_{0.05, 16} \approx 1.746$
 
 ---
@@ -45,4 +45,4 @@ $(28.7 - 3.642, 28.7 + 3.642) = (25.058, 32.342)$
 ---
 
 ## 結論
-在 $90\%$ 的信心水準下，4 歲紅松樹的平均主幹生長量的信賴區間為 $25.06 \, \text{cm}$ 至 $32.34 \, \text{cm}$。
+在 90% 的信心水準下，4 歲紅松樹的平均主幹生長量的信賴區間為 $25.06 \, \text{cm}$ 至 $32.34 \, \text{cm}$。
