--- a/HW1123/06_陳嘉祥/CH09.04_Q01-03.md
+++ b/HW1123/06_陳嘉祥/CH09.04_Q01-03.md
@@ -12,7 +12,7 @@ $$H_0$$ : P $$\ge $$ 0.3
 
 $$H_a$$ : P < 0.3 (左尾檢定) 
 
-已知條件 : n=1000, $$\hat{P} =297/1000 $$=0.297, n*p=300 且 n*(1-p)=700，故可採用Z分配進行檢定。  
+已知條件 : n=1000, $$\hat{P} =297/1000 $$=0.297, n*p=300 且 n*(1-p)=700 $$\ge $$ 5，故可採用Z分配進行檢定。  
 
 左尾檢定，故 $$\alpha $$ = 0.05 ，查表得到Z=-1.645 
 
@@ -28,7 +28,7 @@ $$H_0$$ : P $$\ge$$ = 0.4
 
 $$H_a$$ : P $$\mu\ne $$ 0.4 (雙尾檢定)
 
-已知條件 : n=1400, $$\hat{P} =529/1400 $$=0.3779, n*p=560 且 n*(1-p)=840 $$\ne 5 $$，故採用Z分配進行檢定。  
+已知條件 : n=1400, $$\hat{P} =529/1400 $$=0.3779, n*p=560 且 n*(1-p)=840 $$\ge $$ 5 ，故可採用Z分配進行檢定。  
 
 雙尾檢定，故 $$\alpha/2 $$ = 0.025 ，查表得到Z=1.96 
 
@@ -44,7 +44,7 @@ $$H_0$$ : P $$\le $$ 0.5
  
 $$H_a$$ : P > 0.5 (右尾檢定)  
  
-已知條件 : n=120, $$\hat{P} =72/120 $$=0.6, n*p=60 且 n*(1-p)=60 $$\ne 5 $$，故採用Z分配進行檢定。   
+已知條件 : n=120, $$\hat{P} =72/120 $$=0.6, n*p=60 且 n*(1-p)=60 $$\ge $$ 5，故可採用Z分配進行檢定。   
  
 右尾檢定，故 $$\alpha $$ = 0.05 ，查表得到Z=1.645  
  
