--- a/HW1123/06_陳嘉祥/CH09.04_Q04-06.md
+++ b/HW1123/06_陳嘉祥/CH09.04_Q04-06.md
@@ -4,3 +4,51 @@ Title: HW1123_06_Titan(陳嘉祥)
 
 ![CH09 04_Q04-06](https://github.com/user-attachments/assets/5a36269f-6e80-4add-8485-a60c65590010)
 
+由題目得知：我們的目標是對給定的資料進行假設檢定，並使用 p 值方法來得出結論
+
+### 4：隨機抽取的樣本大小 n=1000，樣本中的成功次數為 279 次，我們希望檢驗比例 p 是否小於 0.3 
+
+$$H_0$$ : P $$\ge $$ 0.3 
+
+$$H_a$$ : P < 0.3 (左尾檢定) 
+
+已知條件 : n=1000, $$\hat{P} =297/1000 $$=0.297, n*p=300 且 n*(1-p)=700 $$\ge $$ 5，計算Z值，求出樣本統計量的左尾面積。  
+
+Z = $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} $$ = $$\frac{0.279 - 0.3}{\sqrt{\frac{0.3 * 0.7}{1000}}} $$ 
+
+= -1.449 $$\cong -1.45 $$。     
+
+P-Value = P( Z < -1.45 )，查表得到 : P( Z < -1.45 ) = 0.0735 > $$\alpha=0.05 $$。
+
+### 5：n=1400，x=529，檢查樣本比例是否與 0.4 有顯著差異。
+
+$$H_0$$ : P = 0.4
+
+$$H_a$$ : P $$\ne $$ 0.4 (雙尾檢定)
+
+已知條件 : n=1400, $$\hat{P} =529/1400 $$=0.3779, n*p=560 且 n*(1-p)=840 $$\ge $$ 5 ，計算Z值，求出樣本統計量的雙尾面積。  
+
+|Z| = $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} $$ = $$\frac{0.3779 - 0.4}{\sqrt{\frac{0.4 * 0.6}{1400}}} $$ 
+
+= 1.688 $$\cong 1.69 $$。     
+
+P-Value = 2*P( Z > 1.69 )，查表得到 : P( Z > 1.69 ) = 0.0455，故 2*P( Z > 1.69 ) = 0.091 > $$\alpha=0.05 $$。
+
+因為P-Value未落在Rejection Region，故不拒絕 $$H_{0} $$ 。   
+
+### 6：n=120，x=72，檢查樣本比例是否大於 0.5。
+
+$$H_0$$ : P $$\le $$ 0.5 
+ 
+$$H_a$$ : P > 0.5 (右尾檢定)  
+ 
+已知條件 : n=120, $$\hat{P} =72/120 $$=0.6, n*p=60 且 n*(1-p)=60 $$\ge $$ 5，計算Z值，求出樣本統計量的右尾面積。  
+
+Z = $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} $$ = $$\frac{0.6 - 0.5}{\sqrt{\frac{0.5 * 0.5}{1000}}} $$ 
+
+= 2.1909 $$\cong 2.19 $$。     
+
+P-Value = P( Z > 2.19 )，查表得到 : P( Z > 2.19 ) = 0.0143 < $$\alpha=0.05 $$。
+
+因為P-Value落入Rejection Region，故拒絕 $$H_{0} $$ 。   
+
