--- a/HW1123/06_陳嘉祥/CH09.04_Q08.md
+++ b/HW1123/06_陳嘉祥/CH09.04_Q08.md
@@ -6,7 +6,7 @@ Title: HW1123_06_Titan(陳嘉祥)
 
 由題目得知：56% 的受訪者表示他們不會乘坐無人駕駛車，樣本大小 n=500，我們要檢驗是否超過 50% 的美國人不會乘坐無人駕駛車。   
  
-###a. 使用 α = 0.05 的假設檢定，來確定是否超過50%的美國人不會乘坐無人駕駛車。   
+### a. 使用 α = 0.05 的假設檢定，來確定是否超過50%的美國人不會乘坐無人駕駛車。 
 
 $$H_0$$ : P $$\le $$ 0.5  
  
@@ -18,12 +18,12 @@ $$H_a$$ : P > 0.5 (右尾檢定)
  
 Z-test :    
  
-Z = $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} $$ = $$\frac{0.56 - 0.5}{\sqrt{\frac{0.5 * 0.5}{500}}} $$ = 2.6832 > 1.645 $$。    
+Z = $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} $$ = $$\frac{0.56 - 0.5}{\sqrt{\frac{0.5 * 0.5}{500}}} $$ = 2.6832 > 1.645    
  
 因為Z檢定量落入Rejection Region，故拒絕 $$H_{0} $$ 。      
   
 
-###b. 使用 p-value 的方法，這兩種方法能得出相同的結果嗎。      
+### b. 使用 p-value 的方法，這兩種方法能得出相同的結果嗎?      
  
 $$H_0$$ : P $$\le $$ 0.5  
  
@@ -35,4 +35,4 @@ P-Value = P( Z > 2.68 )，查表得到 : P( Z > 2.68 ) = 0.0037 < $$\alpha=0.05 
 
 因為P-Value落入Rejection Region，故拒絕 $$H_{0} $$ 。    
 
-故使用P-Value檢定，得出與Z檢定相同結果。 
+可以，使用P-Value檢定可得出與Z檢定相同的結果。 
