--- a/HW1123/06_陳嘉祥/CH09.04_Q01-03.md
+++ b/HW1123/06_陳嘉祥/CH09.04_Q01-03.md
@@ -24,9 +24,9 @@ Z = $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} $$ = $$\frac{0.279 - 0.3}{\
 
 ### 2：隨機抽取的樣本大小 n=1400，樣本中的成功次數為 529 次，我們希望檢驗比例 p 是否不等於 0.4
 
-$$H_0$$ : P $$\ge$$ = 0.4
+$$H_0$$ : P = 0.4
 
-$$H_a$$ : P $$\mu\ne $$ 0.4 (雙尾檢定)
+$$H_a$$ : P $$\ne $$ 0.4 (雙尾檢定)
 
 已知條件 : n=1400, $$\hat{P} =529/1400 $$=0.3779, n*p=560 且 n*(1-p)=840 $$\ge $$ 5 ，故可採用Z分配進行檢定。  
 
