--- a/HW1123/12_譚玥湄/CH10.01_Q06-7.md
+++ b/HW1123/12_譚玥湄/CH10.01_Q06-7.md
@@ -17,7 +17,7 @@ Using the t Table II Find the tabled value of t(ta) corresponding to a left-tail
 
 Using the t-distribution table, we can find the critical values ($$alphat$$) corresponding to the given right-tail area ($$alphat$$) and degrees of freedom (df). Here are the values:
 ________________________________________
-2. $$alphat$$=0.05, df=20  
+2. $$\alpha$$ = .05, df = 20  
 •	From the t-table, the critical value is:  t0.05=1.725
 ________________________________________
 3.  $$\alpha$$ = .01, df = 18   
