--- a/HW1123/HW1123Q01.md
+++ b/HW1123/HW1123Q01.md
@@ -6,7 +6,9 @@ z=-2.41 查表得 P = 0.08
 ![image](https://github.com/user-attachments/assets/220920cf-a8f8-4cf8-8485-7b9e842a3f88)
 
 
-Q8 . 左尾檢定，α=0.01
-P = 0.08 < α=0.01 , Reject H0
+Q8 . 左尾檢定，顯著水準 α=0.01 ，P = 0.08 < α=0.01 → Reject H0 
+
+在該顯著水準下，拒絕該虛無假說，表示母體具備顯著性差異的可能性為99%，僅會有1%的機會無顯著性差異。
+
 ![image](https://github.com/user-attachments/assets/c9bf9f34-b7cf-4c51-aca1-82cce97dd777)
 
