--- a/HW1123/HW1123Q09.md
+++ b/HW1123/HW1123Q09.md
@@ -34,9 +34,14 @@ $$
    - 由於 $Z(STAT) = -1.77 < Z(critical) = -1.645$，拒絕 Ho。
 
 3. **Conclusion結論**:
-   - 在significance level 顯著水準 $\alpha = 0.05$ 下，有足夠證據表明新稅法有助於降低小企業失敗率。
+   - 在significance level 顯著水準 $\alpha = 0.05$ 下，支持新稅法有助於降低小企業失敗率。
 
 ## (d) 計算 $p-value$ 並檢查結論
 
 1. **計算 $p-value$**:
    - 查標準常態分布表可得，當 $z = -1.77$ 時，P(z < -1.77) = 0.0384。
+   - p-value <  $\alpha = 0.05$
+   - 在significance level 顯著水準 $\alpha = 0.05$ 下，支持新稅法有助於降低小企業失敗率。
+
+
+
