--- a/HW1123/HW1123Q09.md
+++ b/HW1123/HW1123Q09.md
@@ -12,35 +12,30 @@ $$
 \hat{p} = \frac{\text{失敗企業數}}{\text{樣本大小}} = \frac{30}{200} = 0.15
 $$
 
-2. **Standard Error標準誤**:
-   
+2. **Test Statistic檢定統計量**:
+
 $$
-SE = \sqrt{\frac{p_0 \cdot (1 - p_0)}{n}} = \sqrt{\frac{0.2 \cdot (1 - 0.2)}{200}} = \sqrt{\frac{0.16}{200}} = \sqrt{0.0008} \approx 0.02828
+z_{\text{stat}} = \frac{\hat{p} - p_0}{\sqrt{\frac{p_0 (1 - p_0)}{n}}}
 $$
 
-3. **Test Statistic檢定統計量**:
- 
 $$
-Z_{\text{STAT}} = \frac{\hat{p} - p_0}{SE} = \frac{0.15 - 0.2}{0.02828} = \frac{-0.05}{0.02828} \approx -1.77
+Z_{\text{STAT}} = \frac{0.15 - 0.2}{\sqrt{\frac{0.2(1 - 0.2)}{200}}} 
+= \approx -1.77
 $$
 
 ## (c) 拒絕域與結論
 
-1. **Rejection region拒絕域**:
-   - 本題為左尾檢定，significance level 顯著水準 $\alpha = 0.05$。
+   - 左側檢定，significance level 顯著水準 $\alpha = 0.05$。
    - 對應標準常態分布的Critical Value臨界值為 $Z(critical) = -1.645$。
 
-2. **Decision決策**:
-   - 由於 $Z(STAT) = -1.77 < Z(critical) = -1.645$，拒絕 Ho。
+   - 由於 $Z(STAT) = -1.77 < Z(critical) = -1.645$，拒絕 Ho
 
-3. **Conclusion結論**:
    - 在significance level 顯著水準 $\alpha = 0.05$ 下，支持新稅法有助於降低小企業失敗率。
 
-## (d) 計算 $p-value$ 並檢查結論
+## (d) 計算 $p-value$ 與結論
 
-1. **計算 $p-value$**:
    - 查標準常態分布表可得，當 $z = -1.77$ 時，P(z < -1.77) = 0.0384。
-   - p-value <  $\alpha = 0.05$
+   - p-value <  $\alpha = 0.05$, ，拒絕 Ho
    - 在significance level 顯著水準 $\alpha = 0.05$ 下，支持新稅法有助於降低小企業失敗率。
 
 
