--- a/HW1123/21_徐偉峻/CH09.04_Q01-03.md
+++ b/HW1123/21_徐偉峻/CH09.04_Q01-03.md
@@ -5,4 +5,4 @@ A random sample of size n from a binomail population to test
 
 $H_0: p = p_0$ versus
 $H_a: one of three alternatives$
-Test statsitics: z = $\frac{\hat{p} - p_0}{\rsqt{\frac{p_0 q_0}{n}}} $
+Test statsitics:  $ z = \frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} $
