--- a/HW1123/21_徐偉峻/CH09.04_Q01-03.md
+++ b/HW1123/21_徐偉峻/CH09.04_Q01-03.md
@@ -8,3 +8,6 @@ $H_0: p = p_0$ versus
 $H_a: one of three alternatives$
 
 Test statsitics: z = $\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}}$
+
+with rejection regions and/or p-values based on the standard normal z distribution
+
