--- a/HW1123/10_蔡佳媛/CH09.02_Q23_10_Cathy.md
+++ b/HW1123/10_蔡佳媛/CH09.02_Q23_10_Cathy.md
@@ -1,3 +1,15 @@
 
 ![image](https://github.com/user-attachments/assets/f7382ec6-5e7d-4fbd-a911-12bf36646b74)
 
+### a. What hypotheses would you test to make sure the average amount of ground beef was indeed 1 pound?
+
+$H_{0}$: $\mu$ = 1  
+$H_{a}$: $\mu \neq$ 1  
+
+### b. Find the p-value for the test and use it to perform the test in part a.
+
+#### Set up $\alpha$ = 0.05
+
+#### Test Statisitc:
+$Z_{STAT} = \frac{\bar{x}-\mu_{0}}{s/\sqrt{n}} \stackrel{d.}\rightarrow$ Z = $\frac{1.01-1}{0.18/\sqrt{35}} \approx$ 0.328671
+
