--- a/HW1123/02_顏子軒/CH09.02_Q23.md
+++ b/HW1123/02_顏子軒/CH09.02_Q23.md
@@ -1,21 +1,28 @@
 ![CH09 02_Q23](https://github.com/user-attachments/assets/cdc82cf1-c0dd-4d3f-81ad-80676c10dde6)
 
-### a. 如果你是質量控制經理，並希望確保每包絞肉的平均重量確實是1磅，你會做那些假設檢定？
-$$H_0$$ : $$\mu$$ = 1 
+### Hamburger Meat
 
-$$H_a$$ : $$\mu\ne$$ 1 
+### 23.Ground beef is packaged in small trays, intended to hold 1 pound of meat. A random sample of 35 packages in the small tray produced weight measurements with an average of 1.01 pounds and a standard deviation of .18 pound.
 
+**a. If you were the quality control manager and wanted to make sure that the average amount of ground beef was indeed 1 pound, what hypotheses would you test?**
 
-### b. 計算 p 值並用它來執行假設檢定。
-假設 $\alpha = 0.05$， 
+>
+>$$H_0$$ : $$\mu$$ = 1 
+>
+>$$H_a$$ : $$\mu\ne$$ 1 
+>
 
-由題意知樣本量(n=35)大於統計學家認定的30，故 $$\frac{\bar{x} - \mu}{s/\sqrt{n}}$$ -> 可以使用Z分配進行檢定。 
+**b. Find the p-value for the test and use it to perform the test in part a。**
 
-P-Value=P(Z>| $$z_{0}$$ |)= 2 * P(Z>| $$\frac{1.01 - 1}{0.18/\sqrt{35}} $$ |) = 2 * P(Z>0.33)，查表得到: 
+>假設 $\alpha = 0.05$， 
+>
+>由題意知樣本量(n=35)大於統計學家認定的30，故 $$\frac{\bar{x} - \mu}{s/\sqrt{n}}$$ -> 可以使用Z分配進行檢定。 
+>
+>P-Value=P(Z>| $$z_{0}$$ |)= 2 * P(Z>| $$\frac{1.01 - 1}{0.18/\sqrt{35}} $$ |) = 2 * P(Z>0.33)，查表得到: 
+>
+>=2*(1-P(Z<0.33)=2*(1-0.6293)=0.7414 > $$\alpha = 0.05 $$，因為統計量未落入Rejection Region，故沒有足夠證據推翻 $$H_{0} $$。
+>
 
-=2*(1-P(Z<0.33)=2*(1-0.6293)=0.7414 > $$\alpha = 0.05 $$，因為統計量未落入Rejection Region，故沒有足夠證據推翻 $$H_{0} $$。
+**c. How would you, as the quality control manager,report the results of your study to a consumer interest group?**
 
-
-### c. 如何向消費者利益小組報告你的研究結果？
-
-「根據對 35 個隨機抽樣包裝的分析，碎牛肉的平均重量為 1.01 磅，略高於設計重量 1 磅。然而，統計檢驗表明，此差異不具有統計顯著性 。因此，我們沒有足夠的證據推翻包裝重量偏離平均重量1磅。」
+>「根據對 35 個隨機抽樣包裝的分析，碎牛肉的平均重量為 1.01 磅，略高於設計重量 1 磅。然而，統計檢驗表明，此差異不具有統計顯著性 。因此，我們沒有足夠的證據推翻包裝重量偏離平均重量1磅。」
