--- a/HW1123/10_蔡佳媛/CH09.02_Q23_10_Cathy.md
+++ b/HW1123/10_蔡佳媛/CH09.02_Q23_10_Cathy.md
@@ -11,5 +11,26 @@ $H_{a}$: $\mu \neq$ 1
 #### Set up $\alpha$ = 0.05
 
 #### Test Statisitc:
-$Z_{STAT} = \frac{\bar{x}-\mu_{0}}{s/\sqrt{n}} \stackrel{d.}\rightarrow$ Z = $\frac{1.01-1}{0.18/\sqrt{35}} \approx$ 0.328671
+$Z_{STAT} = \frac{\bar{x}-\mu_{0}}{s/\sqrt{n}} \stackrel{d.}\rightarrow$ Z = $\frac{1.01-1}{0.18/\sqrt{35}} = 0.328671 \approx$ 0.33
+
+#### Find (a) the rejection region and (b) the p-value
+
+  (a) the rejection region  
+      { $z: z < -z_{\alpha/2}$ , $z > z_{\alpha/2}$ } = { z: z < $-z_{0.025}$, z > $z_{0.025}$ } = {z: z < -1.96, z > 1.96 }  
+      ![image](https://github.com/user-attachments/assets/50d6c6be-1c44-4d76-b78f-89c977d8f301)
+
+  (b) the p-value  
+      P(z > 0.33) + P( z < -0.33) = 2 $\times$ P(z < -0.33) = 2 $\times$ 0.3707 = 0.7414  
+      ![image](https://github.com/user-attachments/assets/9cfe7452-3efb-4610-bb2d-a081a9f9ba9a)
+
+#### Conclude
+
+  (a) $Z_{STAT}$ = 0.33 does not fall into the rejection region and $H_{0}$ is not rejected  
+  (b) p-value = 0.7414 > $\alpha$ = 0.05, $H_{0}$ is not rejected
+
+### As the quality control, how would you report the results to a consumer interest group?
+
+The average amount of ground beef is likely to be 1 pound.  
+There is not enough evidence to indicate that the average amount of ground beef is not 1 pound.
+
 
