--- a/HW1123/10_蔡佳媛/CH09.02_Q24_10_Cathy.md
+++ b/HW1123/10_蔡佳媛/CH09.02_Q24_10_Cathy.md
@@ -1,4 +1,12 @@
 
-![image](https://github.com/user-attachments/assets/9dbbbe38-a33e-4a8b-8bfa-b045a1f9e5f9)
+![image](https://github.com/user-attachments/assets/9dbbbe38-a33e-4a8b-8bfa-b045a1f9e5f9)  
 ![image](https://github.com/user-attachments/assets/99aef8a1-d5f2-4440-bbe8-33b40130f16e)
 
+$\mu$ = 5.86  
+n = 40  
+$\bar{x}$ = 5.56  
+s = 0.7  
+
+### a. Does the data indicate that the average weight of 3-month-old baby girls at their facility is less than 5.86 kilograms? Test using $\alpha$ = 0.05.  
+
+$z_{STAT} = \frac{5.56-5.86}{0.7/\sqrt{40}}$ = \frac{-0.3}{
