--- a/HW1123/02_顏子軒/CH09.04_Q08.md
+++ b/HW1123/02_顏子軒/CH09.04_Q08.md
@@ -24,25 +24,30 @@
 >Sample size $(N) = 500
 >
 >3.Test Statistic($Z$-test for proportions):
+> 
+>𝑍 = $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} $$ = $$\frac{0.56 - 0.5}{\sqrt{\frac{0.5 * 0.5}{500}}} $$ $\approx$ 1.899 > 1.645    
 >
->$$\alpha $$ = 0.05    
-> 
->Z = $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} $$ = $$\frac{0.56 - 0.5}{\sqrt{\frac{0.5 * 0.5}{500}}} $$ $\approx$ 1.899 > 1.645    
-> 
->**因為Z檢定量落入Rejection Region，故拒絕 $$H_{0} $$ 。**  
-> 
+>**4. Critical Value**
+>
+>For a one-tailed test at $$\alpha $$ = 0.05, the critical 𝑍-value is 1.645.
+>
+>**5.Decision**
+>
+>𝑍 = 1.899 > 1.645: Reject $$H_0$$
+>
+>*There is sufficient evidence to conclude that more than 50% of Americans would not ride in a driverless car.*
 
 ***b. Use the p-value approach. Do the two approaches lead to the same conclusion?***
- 
->$$H_0$$ : P $$\le $$ 0.5  
-> 
->$$H_a$$ : P > 0.5 (右尾檢定)   
-> 
->已知條件 : n=500, $$\hat{P} =0.56 $$, n*p=250 且 n*(1-p)=250 $$\ge $$ 5，由小題a.得知Z值接近2.68。   
+    
+>**1.Find the 𝑝-Value**
 >
->P-Value = P( Z > 2.68 )，查表得到 : P( Z > 2.68 ) = 0.0037 < $$\alpha=0.05 $$。 
+>Using standard normal distribution tables , $P( Z > 1.899) $\approx$ 0.0288
+>   
+>**2.Compare 𝑝-Value with 𝛼**
 >
->因為P-Value落入Rejection Region，故拒絕 $$H_{0} $$ 。    
+>$p = 0.0288 < 0.05$: Reject $$H_0$$。 
 >
->**可以，使用P-Value檢定可得出與Z檢定相同的結果**
+>**3.Conclusion:**
+>
+>*The 𝑝-value approach leads to the same conclusion: there is sufficient evidence to suggest that more than 50% of Americans would not ride in a driverless car.*
 >
