--- a/HW1123/HW1123Q08.md
+++ b/HW1123/HW1123Q08.md
@@ -1,1 +1,55 @@
 ## 513717001 顏子軒
+
+
+***Ride in a Driverless Car?***
+
+***In a Pew Research report concerning the rise of automation in the United States, 56% of the participants indicated that they would not ride in a driverless car, and 87% favor a requirement of having a human in the driver’s seat in case of an emergency. Suppose that the number of participants was n=500. Is there sufficient evidence to conclude that more than a simple majority of Americans would not ride in a driverless car?***
+ 
+***a.  Use a formal test of hypothesis with α = 0.05 to determine whether more than 50% of Americans would not ride in a driverless car.***
+
+>**1.Define Hypotheses:**
+><br/>
+>
+>$$H_0$$ : $P = 0.5$
+>(exactly half of Americans would not ride in a driverless car).
+> 
+>$$H_a$$ : $P > 0.5$
+> (more than half of Americans would not ride in a driverless car).
+><br/>
+>
+>**2.Given Data:**
+>
+>Sample proportion $$\hat{P} =0.56 $$
+>
+>Population proportion under $H_0$ $(p0)$ $= 0.50$
+>
+>Sample size $(N) = 500
+>
+>3.Test Statistic($Z$-test for proportions):
+> 
+>𝑍 = $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} $$ = $$\frac{0.56 - 0.5}{\sqrt{\frac{0.5 * 0.5}{500}}} $$ $\approx$ 1.899 > 1.645    
+>
+>**4. Critical Value**
+>
+>For a one-tailed test at $$\alpha $$ = 0.05, the critical 𝑍-value is 1.645.
+>
+>**5.Decision**
+>
+>𝑍 = 1.899 > 1.645: Reject $$H_0$$
+>
+>*There is sufficient evidence to conclude that more than 50% of Americans would not ride in a driverless car.*
+
+***b. Use the p-value approach. Do the two approaches lead to the same conclusion?***
+    
+>**1.Find the 𝑝-Value**
+>
+>Using standard normal distribution tables , $P( Z > 1.899) $\approx$ 0.0288
+>   
+>**2.Compare 𝑝-Value with 𝛼**
+>
+>$p = 0.0288 < 0.05$: Reject $$H_0$$。 
+>
+>**3.Conclusion:**
+>
+>*The 𝑝-value approach leads to the same conclusion: there is sufficient evidence to suggest that more than 50% of Americans would not ride in a driverless car.*
+>
