--- a/HW1123/10_蔡佳媛/CH09.02_Q24_10_Cathy.md
+++ b/HW1123/10_蔡佳媛/CH09.02_Q24_10_Cathy.md
@@ -9,4 +9,17 @@ s = 0.7
 
 ### a. Does the data indicate that the average weight of 3-month-old baby girls at their facility is less than 5.86 kilograms? Test using $\alpha$ = 0.05.  
 
-$z_{STAT} = \frac{5.56-5.86}{0.7/\sqrt{40}}$ = \frac{-0.3}{
+$H_{0}$: $\mu$ < 5.86  
+$H_{a}$: $\mu \geq$ 5.86
+
+$Z_{STAT} = \frac{5.56-5.86}{0.7/\sqrt{40}}$ = -2.710524 $\approx$ -2.71  
+
+rejection region = { z: z > $z_{\alpha}$ } = { z: z > $z_{0.05}$ } = {z: z > 1.645 }  
+$Z_{STAT}$ = -2.71 does not fall into the rejection region and $H_{0}$ is not rejected  
+
+### b. What is the p-value associated with the test in part a.? Can you reject $H_{0}$ at the 5% level of significance using the p-value?
+
+p-value: P(z > -2.71) = 1 - P(z < -2.71) = 1 - 0.0034 = 0.9966 > $\alpha$, $H_{0}$ is not rejected  
+![image](https://github.com/user-attachments/assets/99111865-ad45-4385-812c-a40ad1f23845)
+
+
