--- a/HW1123/10_蔡佳媛/CH09.02_Q25_10_Cathy.md
+++ b/HW1123/10_蔡佳媛/CH09.02_Q25_10_Cathy.md
@@ -1,2 +1,18 @@
 
 ![image](https://github.com/user-attachments/assets/e5f0d211-90fb-497d-8a84-8a36651e57af)
+
+$\mu$ = 0.8  
+n = 100  
+$bar{x}$ = 0.797  
+s = 0.008  
+$\alpha$ = 0.05  
+
+### a. State the $H_{0}$ to be tested.
+
+
+
+### b. State the $H_{a}$.
+
+
+
+### c. Conduct a statistical test of the $H_{0}$ and state your conclusion.
