--- a/HW1123/02_顏子軒/CH09.04_Q08.md
+++ b/HW1123/02_顏子軒/CH09.04_Q08.md
@@ -23,9 +23,9 @@
 >
 >Sample size $(N) = 500
 >
->3.Test Statistic($Z$-test for proportions):
+>**3.Test Statistic($Z$-test for proportions):**
 > 
->𝑍 = $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} $$ = $$\frac{0.56 - 0.5}{\sqrt{\frac{0.5 * 0.5}{500}}} $$ $\approx$ 1.899 > 1.645    
+>𝑍 = $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} $$ = $$\frac{0.56 - 0.5}{\sqrt{\frac{0.5 * 0.5}{500}}} $$ $\approx$ 1.899     
 >
 >**4. Critical Value**
 >
