--- a/HW1123/10_蔡佳媛/CH09.02_Q25_10_Cathy.md
+++ b/HW1123/10_蔡佳媛/CH09.02_Q25_10_Cathy.md
@@ -9,10 +9,17 @@ $\alpha$ = 0.05
 
 ### a. State the $H_{0}$ to be tested.
 
-$H_{0}$ = 
+$H_{0}$ = 0.8  
 
 ### b. State the $H_{a}$.
 
-
+$H_{a} \neq$ 0.8  
 
 ### c. Conduct a statistical test of the $H_{0}$ and state your conclusion.
+
+$Z_{STAT}$ = $\frac{0.797-0.8}{0.008/\sqrt{100}$ = -3.75
+
+(a) rejection region = { z: z < $-z_{0.025}$, z > $z_{0.025}$ } = { z: z < -1.96, z > 1.96 }  
+    ![image](https://github.com/user-attachments/assets/dd0d3e54-c221-4ea0-82b8-b6851d57b1fe)
+
+    
