--- a/HW1123/HW1123Q08.md
+++ b/HW1123/HW1123Q08.md
@@ -43,7 +43,7 @@
     
 >**1.Find the 𝑝-Value**
 >
->Using standard normal distribution tables , $P( Z > 1.899) $\approx$ 0.0288
+>Using standard normal distribution tables , $P( Z > 1.899)$  $\approx$  0.0288
 >   
 >**2.Compare 𝑝-Value with 𝛼**
 >
