--- a/HW1123/18_張睿廷/CH09.02_Q08-10.md
+++ b/HW1123/18_張睿廷/CH09.02_Q08-10.md
@@ -1,1 +1,84 @@
 ![image](https://github.com/user-attachments/assets/93c29315-adb9-4b0c-875e-dae9c9d22d61)
+
+
+## **題目 8：Left-tailed test with $\alpha = 0.01$**
+
+1. **找臨界值**：
+   - 左尾檢定，顯著水準 $\alpha = 0.01$。
+   - 查表找到累積機率為 $0.01$ 的 $z$ 值：
+     - 表中接近 $0.01$ 的值是 **0.0100**，對應 $z = -2.33$。
+   - 所以臨界值 $z_{\alpha} = -2.33$。
+
+<img width="227" alt="image" src="https://github.com/user-attachments/assets/73aea86a-eba1-448c-83ab-d31b40b70890">
+
+
+2. **檢查統計量 $z = -2.41$**：
+   - 拒絕域為 $z < -2.33$。
+   - 檢定統計量 $z = -2.41$，落在拒絕域內。
+
+3. **結論**：
+   - 拒絕虛無假設 $H_0$。
+
+4. **P 值計算**：
+   - 查表找 $z = -2.41$ 的累積機率：
+     - $z = -2.4$ 和 $0.01$ 的交叉值是 **0.0080**。
+   - $P$ 值 $= 0.008$，小於 $\alpha = 0.01$。
+   - 結論可靠。
+
+---
+
+## **題目 9：Left-tailed test with $\alpha = 0.05$**
+
+1. **找臨界值**：
+   - 左尾檢定，顯著水準 $\alpha = 0.05$。
+   - 查表找到累積機率為 $0.05$ 的 $z$ 值：
+     - 表中接近 $0.05$ 的值是 **0.0500**，對應 $z = -1.645$。
+   - 所以臨界值 $z_{\alpha} = -1.645$。
+
+<img width="260" alt="image" src="https://github.com/user-attachments/assets/2d8c687f-95e3-4bd6-97b0-e02595ada7f2">
+
+
+2. **檢查統計量 $z = -2.41$**：
+   - 拒絕域為 $z < -1.645$。
+   - 檢定統計量 $z = -2.41$，落在拒絕域內。
+
+3. **結論**：
+   - 拒絕虛無假設 $H_0$。
+
+4. **P 值計算**：
+   - 查表找 $z = -2.41$ 的累積機率是 **0.0080**。
+   - $P$ 值 $= 0.008$，小於 $\alpha = 0.05$。
+   - 結論可靠。
+
+---
+
+## **題目 10：Two-tailed test with $\alpha = 0.02$**
+
+1. **找臨界值**：
+   - 雙尾檢定，將 $\alpha$ 平分到兩尾： $\alpha/2 = 0.01$。
+   - 查表找到累積機率為 $0.01$ 的 $z$ 值：
+     - 表中接近 $0.01$ 的值是 **0.099**，對應 $z = \pm 2.33$。
+   - 所以臨界值 $z_{\alpha/2} = \pm 2.33$。
+
+<img width="182" alt="image" src="https://github.com/user-attachments/assets/af8a35ee-b611-478b-b7cc-590149831d9e">
+
+
+2. **檢查統計量 $z = -2.41$**：
+   - 拒絕域為 $z < -2.33$ 或 $z > 2.33$。
+   - 檢定統計量 $z = -2.41$，落在左尾拒絕域內。
+
+3. **結論**：
+   - 拒絕虛無假設 $H_0$。
+
+4. **P 值計算**：
+   - 查表找 $z = -2.41$ 的累積機率是 **0.0080**。
+   - 雙尾檢定的 $P$ 值是 $2 \times 0.008 = 0.016$。
+   - $P$ 值 $= 0.016$，小於 $\alpha = 0.02$。
+   - 結論可靠。
+
+---
+
+## **最終結果**
+- **題目 8**：拒絕 $H_0$，$P$ 值 $= 0.008$，可靠。
+- **題目 9**：拒絕 $H_0$，$P$ 值 $= 0.008$，可靠。
+- **題目 10**：拒絕 $H_0$，$P$ 值 $= 0.016$，可靠。
