--- a/HW1123/18_張睿廷/CH09.02_Q11-13.md
+++ b/HW1123/18_張睿廷/CH09.02_Q11-13.md
@@ -1,1 +1,43 @@
 ![image](https://github.com/user-attachments/assets/b70b9f29-5434-4733-95ce-501a5923f8cc)
+
+## **題目 11：Right-tailed test with observed $z = 1.15$**
+
+1. **計算 $P$ 值**：
+   - 查表找到 $z = 1.15$ 的累積機率： **0.8749**。
+   - $P(z>1.15)$ = 1 − $P(z<1.15)$ = 1 − 0.8749 = 0.1251
+  
+   <img width="257" alt="image" src="https://github.com/user-attachments/assets/53840221-202f-4f0e-b123-afadaff73fc8">
+
+
+2. **結論**：
+   - 若顯著水準 $\alpha = 0.05$， $P$ 值 $= 0.1251 > 0.05$，結果不顯著。
+---
+
+## **題目 12：Two-tailed test with observed $z = -2.78$**
+
+1. **計算 $P$ 值**：
+   - 查表找到 $z = -2.78$ 的累積機率： **0.0027**。
+   - $P(z<-2.78)$ = 0.0027$。
+  
+<img width="382" alt="image" src="https://github.com/user-attachments/assets/3240a7b7-b8e2-45b9-93d4-a631c46c779f">
+
+
+2. **結論**：
+   - 若顯著水準 $\alpha = 0.05$， $P$ 值 $= 0.0054 < 0.05 $，結果顯著。
+
+---
+
+## **題目 13：Left-tailed test with observed $z = -1.81$**
+
+1. **計算 $P$ 值**：
+   - 查表找到 $z = 1.81$ 的累積機率： **0.0351**。
+   - $P(z<-1.18)$ =  0.0351 。
+
+<img width="107" alt="image" src="https://github.com/user-attachments/assets/1d4472d1-bff5-4fa5-a9f3-f2adead67b74">
+
+
+2. **結論**：
+   - 若顯著水準 $\alpha = 0.05$， $P$ 值 $= 0.0351 < 0.05$，結果顯著。
+
+---
+
