--- a/HW1123/HW1123Q01.md
+++ b/HW1123/HW1123Q01.md
@@ -2,17 +2,31 @@
 
 ![image](https://github.com/user-attachments/assets/926aac00-e639-4a93-8f0e-c1497a79630e)
 
-z=-2.41 查表得 P = 0.08
+
 ![image](https://github.com/user-attachments/assets/220920cf-a8f8-4cf8-8485-7b9e842a3f88)
 
 
-Q8 . 左尾檢定，顯著水準 α=0.01 ，**P = 0.08 < α=0.01 → Reject H0 
+ z=-2.41 查表得 P = 0.008
+
+
+Q8 . 左尾檢定，顯著水準 α=0.01 ，**P = 0.008 < α=0.01 → Reject H0
+
+ 
 
 在該顯著水準下拒絕該虛無假說，表示母體具備顯著性差異的可能性為99%，僅會有1%的機會無顯著性差異，推斷H1為真機率很高。
 
-Q9 . 左尾檢定，顯著水準 α=0.05 ，*P = 0.08 > α=0.05 → Reject H0 
-
-在該顯著水準下拒絕該虛無假說，表示母體具備顯著性差異的可能性為95%，僅會有5%的機會無顯著性差異，推斷H1為真機率很高。
+ 
 
 ![image](https://github.com/user-attachments/assets/c9bf9f34-b7cf-4c51-aca1-82cce97dd777)
-.
+
+ 
+
+Q9 . 左尾檢定，顯著水準 α=0.05 ，*P = 0.008 > α=0.05 → Reject H0
+
+ 
+
+在該顯著水準下拒絕該虛無假說，表示母體具備顯著性差異的可能性為95%，僅會有5%的機會無顯著性差異，推斷H1為真機率高。
+
+ 
+
+![image](https://github.com/user-attachments/assets/9ece5f98-1bf1-4d34-8b1e-b3764506c213)
