--- a/HW1123/HW1123Q01.md
+++ b/HW1123/HW1123Q01.md
@@ -30,3 +30,7 @@ Q9 . 左尾檢定，顯著水準 α=0.05 ，*P = 0.008 > α=0.05 → Reject H0
  
 
 ![image](https://github.com/user-attachments/assets/9ece5f98-1bf1-4d34-8b1e-b3764506c213)
+
+
+Q10.
+![image](https://github.com/user-attachments/assets/e318f183-a20b-4ec7-81d4-e35f45e11e1e)
