--- a/HW1123/04_林佑娟/CH09.04_Q10.md
+++ b/HW1123/04_林佑娟/CH09.04_Q10.md
@@ -6,14 +6,18 @@
 
 一個植物學家將紅色花瓣的牡丹植物與另一種有條紋花瓣的植物交配。一位遺傳學家表示，交配後產生的後代 75% 都會開紅色的花。
 為了驗證這一說法，收集了 100 粒來自交配後種子並發芽，其中 58 株植物有紅色花瓣。
+
 a.該用什麼假設檢驗遺傳學家的主張
+
 b.計算檢定統計量及其 p 值。使用 p 值評估結果在 1% 水準上的統計顯著性。
 
 解答：
 
 a.
 首先這屬於假設檢定，檢驗基因學家的主張是否成立。基因學家説該交配的後代中有 75% 的機率會有紅色花瓣。實驗中，從100個種子中有58個長出了紅色花瓣。且屬於雙尾檢定，檢驗的是比例是否等於 75%。
+
 b.
+
 (1)  $H_0$ : P = 75%
 
 (2)  $H_a$ : P $\ne$ 75%
@@ -24,4 +28,9 @@ b.
 
 Z = $$\frac{0.58-0.75}{\sqrt{\frac{0.75*0.25}{100}}} $$ = -3.9260
 
-Ｐ(Z=-3.93) = 0
+P(Z=-3.93)= 0
+
+P-Value < a = 0.01
+
+結論：拒絕 H_0。這意味著有足夠的證據表明紅色花瓣的比例不等於 75%。
+
