--- a/HW1123/HW1123Q01.md
+++ b/HW1123/HW1123Q01.md
@@ -23,7 +23,6 @@ Q8 . 左尾檢定，顯著水準 α=0.01 ，**P = 0.008 < α=0.01 → Reject H0
 
 Q9 . 左尾檢定，顯著水準 α=0.05 ，*P = 0.008 > α=0.05 → Reject H0
 
- 
 
 在該顯著水準下拒絕該虛無假說，表示母體具備顯著性差異的可能性為95%，僅會有5%的機會無顯著性差異，推斷H1為真機率高。
 
@@ -33,4 +32,7 @@ Q9 . 左尾檢定，顯著水準 α=0.05 ，*P = 0.008 > α=0.05 → Reject H0
 
 
 Q10. 
-![image](https://github.com/user-attachments/assets/e318f183-a20b-4ec7-81d4-e35f45e11e1e)
+
+
+![image](https://github.com/user-attachments/assets/d0930f3f-0b6b-449a-83e0-3e4f1432e1bf) =200x300
+
