--- a/HW1123/HW1123Q01.md
+++ b/HW1123/HW1123Q01.md
@@ -34,5 +34,5 @@ Q9 . 左尾檢定，顯著水準 α=0.05 ，*P = 0.008 > α=0.05 → Reject H0
 Q10. 
 
 
-![image](https://github.com/user-attachments/assets/d0930f3f-0b6b-449a-83e0-3e4f1432e1bf) =200x300
+![image](https://github.com/user-attachments/assets/d0930f3f-0b6b-449a-83e0-3e4f1432e1bf)
 
