--- a/HW1123/HW1123Q01.md
+++ b/HW1123/HW1123Q01.md
@@ -31,7 +31,7 @@ Q9 . 左尾檢定，顯著水準 α=0.05 ，*P = 0.008 > α=0.05 → Reject H0
 ![image](https://github.com/user-attachments/assets/9ece5f98-1bf1-4d34-8b1e-b3764506c213)
 
 
-Q10. 
+Q10.  雙尾檢定，顯著水準 α=0.02 ，*P = 0.008 > α/2=0.01 → Reject H0
 
 
 ![image](https://github.com/user-attachments/assets/d0930f3f-0b6b-449a-83e0-3e4f1432e1bf)
