--- a/HW1123/12_譚玥湄/CH09.02_Q11-13.md
+++ b/HW1123/12_譚玥湄/CH09.02_Q11-13.md
@@ -16,7 +16,7 @@ So: p=1−0.8749=0.1251
 
 2.	Significance:  
 Compare the p-value to the significance level ($$\alpha$$, often 0.05).  
-Since 0.1251>0.050.1251 > 0.050.1251>0.05, the result is not significant.
+Since 0.1251>0.05, the result is not significant.
 
 ----
 12. A two-tailed test with observed z = 22.78  
