--- a/HW1123/HW1123Q07.md
+++ b/HW1123/HW1123Q07.md
@@ -1,22 +1,4 @@
 ![image](https://github.com/user-attachments/assets/b2d8f278-1e01-49e9-afe8-91a20ad3878f)
-4、
-H0: P = 0.3
-Ha: P < 0.3
-![image](https://github.com/user-attachments/assets/83167cc0-061b-43ca-91f2-969258495ee0)
-![image](https://github.com/user-attachments/assets/7ac99299-c518-4d0a-80b3-18369dd2c4e6)
-P-value = P(Z<-1.4491) ≈ P(Z<-1.45)= 0.0735
-由 P-value > α = 0.05 ，故不拒絕虛無假設
-5、
-H0: P = 0.4
-Ha: P≠0.4
-![image](https://github.com/user-attachments/assets/54bfdbca-0d54-42ab-961c-49ef366ff772)
-P-value = P(Z<-1.42) = 0.0778
-由 P-value > α = 0.025(雙尾檢定) ，故無法拒絕虛無假設，即無足夠證據顯示P≠0.4
-6、
-H0: P = 0.5
-Ha: P > 0.5
-![image](https://github.com/user-attachments/assets/477928ed-0254-4ce7-9bd5-202a7b46583d)
-P-value = P(Z> 2.191) ≈ P(Z>2.19)= 1-0.9857 = 0.0143
-由 P-value < α = 0.05 ，故拒絕虛無假設，即足夠證據顯示 P > 0.5
+<img width="224" alt="image" src="https://github.com/user-attachments/assets/303637be-7f15-4bcd-ba52-aa7f96cb7d32">
 
 
