--- a/HW1123/12_譚玥湄/CH10.02_Q20.md
+++ b/HW1123/12_譚玥湄/CH10.02_Q20.md
@@ -1,1 +1,38 @@
 20. Cerebral Blood Flow Cerebral blood flow (CBF) in the brains of healthy people is normally distributed with a mean of 74. A random sample of 25 stroke patients resulted in an average CBF of x =69.7 with a standard deviation of s = 16. Test the hypothesis that the average CBF for stroke patients is different from that of healthy people using a =.05.
+
+---
+Step 1: State the Hypotheses
+•	Null Hypothesis (H0H_0H0):μ=74 (The average CBF for stroke patients is equal to that of healthy people.)
+•	Alternative Hypothesis (HaH_aHa): μ≠74 (The average CBF for stroke patients is different from that of healthy people.)
+________________________________________
+Step 2: Determine the Test Statistic
+The formula for the test statistic is:
+t=xˉ−μs/nt = \frac{\bar{x} - \mu}{s / \sqrt{n}}t=s/nxˉ−μ
+Where:
+•	xˉ=69.7\bar{x} = 69.7xˉ=69.7 (sample mean)
+•	μ=74 (population mean under H0H_0H0)
+•	s=16 (sample standard deviation)
+•	n=25 (sample size)
+________________________________________
+Step 3: Calculate the Test Statistic
+t=69.7−7416/25=−4.33.2≈−1.34t = \frac{69.7 - 74}{16 / \sqrt{25}} = \frac{-4.3}{3.2} \approx -1.34t=16/2569.7−74=3.2−4.3≈−1.34
+________________________________________
+Step 4: Determine the Critical Value
+For a two-tailed test at a significance levelα=0.05 and degrees of freedom (df=n−1=24), the critical t-values can be obtained from a t-distribution table or software:
+•	Critical t-values: ±2.064\pm 2.064±2.064.
+________________________________________
+Step 5: Decision Rule
+•	Reject H0H_0H0 if t≤−2.064.
+•	Since t=−1.34 does not fall outside the critical values (−2.064 to 2.064), we fail to reject H0H_0H0.
+________________________________________
+Step 6: Conclusion
+At the 5% significance level, there is insufficient evidence to conclude that the average cerebral blood flow (CBF) for stroke patients is different from that of healthy people.
+________________________________________
+Step 7: P-value Calculation
+For t=−1.34  and df=24 , the two-tailed p-value can be obtained using statistical software or a ttt-distribution table:
+•	p≈0.192p \approx 0.192p≈0.192.
+Since p=0.192>0.05, we again fail to reject H0H_0H0.
+________________________________________
+Final Conclusion
+The data do not provide enough evidence to support the claim that the average CBF for stroke patients differs from that of healthy people.
+
