--- a/HW1123/12_譚玥湄/CH10.02_Q21.md
+++ b/HW1123/12_譚玥湄/CH10.02_Q21.md
@@ -1,1 +1,33 @@
 21. Red Pine - The main stem growth measured for a sample of seventeen 4-year-old red pine trees produced a mean and standard deviation equal to 28.7 and 8.6 centimeters, respectively. Find a 90% confidence interval for the mean growth of a population of 4-year old red pine trees subjected to similar environmental conditions.
+
+---
+
+To calculate a 90% confidence interval for the mean growth of a population of 4-year-old red pine trees, we use the formula for a confidence interval based on the ttt-distribution:
+Confidence Interval=xˉ±t∗⋅sn\text{Confidence Interval} = \bar{x} \pm t^* \cdot \frac{s}{\sqrt{n}}Confidence Interval=xˉ±t∗⋅ns
+Where:
+•	xˉ=28.7 (sample mean),
+•	s=8.6 (sample standard deviation),
+•	n=17n = 17n=17 (sample size),
+•	t∗t^*t∗ is the critical value from the ttt-distribution for a 90% confidence level with df=n−1=16.
+________________________________________
+Step 1: Find the Critical ttt-Value
+For a 90% confidence interval and df=16, the critical t∗t^*t∗-value can be found using a ttt-table or statistical software:
+t∗≈1.746t^* \approx 1.746t∗≈1.746
+________________________________________
+Step 2: Compute the Margin of Error
+The margin of error is given by:
+Margin of Error=t∗⋅sn\text{Margin of Error} = t^* \cdot \frac{s}{\sqrt{n}}Margin of Error=t∗⋅ns
+Substitute the values:
+Margin of Error=1.746⋅8.617≈1.746⋅2.085≈3.64\text{Margin of Error} = 1.746 \cdot \frac{8.6}{\sqrt{17}} \approx 1.746 \cdot 2.085 \approx 3.64Margin of Error=1.746⋅178.6≈1.746⋅2.085≈3.64
+________________________________________
+Step 3: Compute the Confidence Interval
+The confidence interval is:
+Confidence Interval=xˉ±Margin of Error\text{Confidence Interval} = \bar{x} \pm \text{Margin of Error}Confidence Interval=xˉ±Margin of Error
+Substitute the values:
+Confidence Interval=28.7±3.64\text{Confidence Interval} = 28.7 \pm 3.64Confidence Interval=28.7±3.64
+This gives:
+Confidence Interval=(25.06,32.34)\text{Confidence Interval} = (25.06, 32.34)Confidence Interval=(25.06,32.34)
+________________________________________
+Final Answer:
+The 90% confidence interval for the mean growth of the population of 4-year-old red pine trees is:
+(25.06 cm, 32.34 cm)\boxed{(25.06 \, \text{cm}, \, 32.34 \, \text{cm})}(25.06cm,32.34cm)
