--- a/HW1123/12_譚玥湄/CH09.04_Q11.md
+++ b/HW1123/12_譚玥湄/CH09.04_Q11.md
@@ -4,3 +4,46 @@ a. If you wish to determine whether the screening program has been effective, st
 b. State the null hypothesis.  
 c. If 164 women in the sample of 200 survive the disease,can you conclude that the screening program was effective? Test using $$\alpha$$ = .05 and explain the practical conclusions from your test.  
 d. Find the p-value for the test and interpret it.  
+
+---
+We are testing whether a screening program has increased the survival rate (p) of women diagnosed with early-stage breast cancer. Here’s the solution step-by-step:
+________________________________________
+Part (a): State the Alternative Hypothesis
+The alternative hypothesis reflects the claim that the survival rate (p) has increased due to the screening program. Since historically p=13=0.333, the alternative hypothesis is:
+Ha:p>0.333
+________________________________________
+Part (b): State the Null Hypothesis
+The null hypothesis assumes no effect from the screening program, meaning the survival rate remains the same as the historical rate:
+H0:p=0.333
+________________________________________
+Part (c): Conduct the Hypothesis Test
+To test if the screening program is effective, we use a one-tailed z-test for a population proportion. The test statistic is given by:
+z=p^−p0p0(1−p0)nz = \frac{\hat{p} - p_0}{\sqrt{\frac{p_0(1 - p_0)}{n}}}z=np0(1−p0)p^−p0
+Where:
+•	p^=xn=164200=0.82\hat{p} = \frac{x}{n} = \frac{164}{200} = 0.82p^=nx=200164=0.82 (sample proportion),
+•	p0=0.333 (population proportion under H0H_0H0),
+•	n=200 (sample size).
+Step 1: Calculate the Standard Error
+SE=p0(1−p0)n=0.333(1−0.333)200=0.333⋅0.667200≈0.0335SE = \sqrt{\frac{p_0 (1 - p_0)}{n}} = \sqrt{\frac{0.333 (1 - 0.333)}{200}} = \sqrt{\frac{0.333 \cdot 0.667}{200}} \approx 0.0335SE=np0(1−p0)=2000.333(1−0.333)=2000.333⋅0.667≈0.0335
+Step 2: Compute the Test Statistic
+z=p^−p0SE=0.82−0.3330.0335≈0.4870.0335≈14.54z = \frac{\hat{p} - p_0}{SE} = \frac{0.82 - 0.333}{0.0335} \approx \frac{0.487}{0.0335} \approx 14.54z=SEp^−p0=0.03350.82−0.333≈0.03350.487≈14.54
+Step 3: Find the Critical Value
+For a one-tailed test at α=0.05\alpha = 0.05α=0.05, the critical zzz-value is:
+z∗=1.645z^* = 1.645z∗=1.645
+Step 4: Compare Test Statistic and Critical Value
+Since z=14.54>1.645, we reject H0H_0H0.
+Conclusion:
+There is strong evidence that the screening program has increased the survival rate of women diagnosed with early-stage breast cancer.
+________________________________________
+Part (d): Find the p-value
+The p-value is the probability of observing a test statistic as extreme or more extreme than the one computed, assuming H0H_0H0 is true. For z=14.54, the p-value is virtually 000 (approaches 10−4710^{-47}10−47), which is far smaller than α=0.05\alpha = 0.05α=0.05.
+Interpretation:
+The p-value indicates overwhelming evidence against H0H_0H0. Practically, this means the screening program is highly effective at improving the survival rate.
+________________________________________
+Summary of Results:
+•	H0H_0H0:p=0.333, HaH_aHa:p>0.333.
+•	Test statistic: z=14.54.
+•	Critical value: z∗=1.645.
+•	P-value: Approaches 000.
+•	Conclusion: Reject H0H_0H0. The screening program significantly improves the survival rate of women diagnosed with early-stage breast cancer.
+
